--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxU8Iy_29vzleTtyaN1cHZsGlf_A-4OcI0XkmvhX8e2G-5ArN2OtQJBv1CfCwou-4aYag/exec'; // ここにデプロイしたURLを記入
+    const APPS_SCRIPT_URL = 'YOUR_DEPLOYED_URL'; // ここにデプロイしたURLを記入
 
     async function updateAvailability(year, month) {
       const response = await fetch(`${APPS_SCRIPT_URL}?year=${year}&month=${month}`);
@@ -425,7 +425,4 @@
 </script>
 
 </body>
-</html>
-"# testfoam" 
-"# testfoam" 
-"# testfoam" 
+</html> 
