--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    const APPS_SCRIPT_URL = 'YOUR_DEPLOYED_URL'; // ここにデプロイしたURLを記入
+    const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwiaNcGdNdvvRTHTh593wdzKoEPoZCcgiGLpzm9EeHCrCO2obZCU5L3OpuIeEq4Vyk7/exec'; // ここにデプロイしたURLを記入
 
     async function updateAvailability(year, month) {
       const response = await fetch(`${APPS_SCRIPT_URL}?year=${year}&month=${month}`);
