--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <!-- date -->
             <div class="form-group">
-		    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -235,9 +235,6 @@
 </body>
 </html>
 
-                <label>第1希望日</label>
-                <div class="form-group">
-                    <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
                 </div>
                 <select class="form-control" v-model="datepicker1time">
                     <option value="08:30">08:30</option>
@@ -404,7 +401,7 @@
         },
         mounted: async function(){
             await liff.init({
-                liffId: "2004727608-aZejr9x5"
+                liffId: ""
             }).then(()=>{
                 if (liff.isLoggedIn()) {
                     console.log("ログイン済");
