--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
 </body>
 </html>
 
+                <label>第1希望日</label>
+                <div class="form-group">
+                    <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
                 </div>
                 <select class="form-control" v-model="datepicker1time">
                     <option value="08:30">08:30</option>
