--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
     async function updateAvailability(year, month) {
-      const response = await fetch(`YOUR_APPS_SCRIPT_DEPLOY_URL?year=${year}&month=${month}`);
+      const response = await fetch(`https://script.google.com/macros/s/AKfycbxwD4_SFJl4lJq5K3uJi9XSKKXTrgLiDYgCmUwxSmbZMkKtLi4_mmXUnRxXo65iDuR2dw/exec?year=${year}&month=${month}`);
       const availability = await response.json();
       
       document.querySelectorAll('.flatpickr-day').forEach(function(dayElem) {
