--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ createApp({
     },
     mounted: async function(){
         await liff.init({
-            liffId: ""
+            liffId: "2005254357-zKma9BZk"
         }).then(()=>{
             if (liff.isLoggedIn()) {
                 console.log("ログイン済");
