--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ createApp({
             var date2 = new Date(this.datepicker2);
             var date3 = new Date(this.datepicker3);
 
-            var datetime1 = date1.getFullYear() + "/" + (date1.getMonth() + 1) + "/" + date1.getDate() + "/ " + this.datepicker1time;
+            var datetime1 = date1.getFullYear() + "年" + (date1.getMonth() + 1) + "月" + date1.getDate() + "日 " + this.datepicker1time;
             var datetime2 = date2.getFullYear() + "年" + (date2.getMonth() + 1) + "月" + date2.getDate() + "日 " + this.datepicker2time;
             var datetime3 = date3.getFullYear() + "年" + (date3.getMonth() + 1) + "月" + date3.getDate() + "日 " + this.datepicker3time;
 
