--- a/index.html
+++ b/index.html
@@ -174,187 +174,100 @@
                     </label>
                 </div>
             </div>
-
-            <!-- datepicker -->
+            
             <div class="form-group">
-                <label for="first-choice-date">第1希望日</label>
-                <input type="text" id="first-choice-date" placeholder="クリックして日時を入力">
+                <label>予約日時選択</label>
+                <vue-datepicker
+                v-model="date"
+                :inline="true"
+                :time-picker="true"
+                format="YYYY-MM-DD HH:mm:ss"
+                ></vue-datepicker>
             </div>
-
+            <!-- 送信ボタン -->
             <div class="form-group">
-                <label>第1希望時間</label>
-                <select v-model="datepicker1time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
+                <button type="submit" class="btn btn-info regist" @click="submit()">送　信</button>
             </div>
-
-            <div class="form-group">
-                <label>第2希望日</label>
-                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+            <div id="error">
+                <p class="text-danger">エラーが発生しました。もう一度やり直してください。</p>
             </div>
-
-            <div class="form-group">
-                <label>第2希望時間</label>
-                <select v-model="datepicker2time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>第3希望日</label>
-                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
-            </div>
-
-            <div class="form-group">
-                <label>第3希望時間</label>
-                <select v-model="datepicker3time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>メッセージ</label>
-                <textarea v-model="message" name="customer_message" class="form-control" required rows="6"></textarea>
-            </div>
-
-            <input type="button" @click="done()" value="予約内容を送信する" class="btn btn-primary regist">
         <!-- </form> -->
     </div>
 </section>
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-async function updateAvailability(year, month) {
-  const response = await fetch(`https://script.google.com/macros/s/AKfycbyKeZtzzggmyJPl53BJEtac43BIBuRuk0kVt3SoFPOJ2MeTRQ_NlGca2vOycYlAleUKhA/exec?year=${year}&month=${month}`);
-  const availability = await response.json();
-  
-  document.querySelectorAll('.flatpickr-day').forEach(function(dayElem) {
-    const date = dayElem.dateObj;
-    const dateString = date.toISOString().split('T')[0];
-    if (availability[dateString]) {
-      const badge = document.createElement('div');
-      badge.className = 'availability-badge';
-      badge.textContent = availability[dateString];
-      dayElem.appendChild(badge);
-    }
-  });
-}
+    var liffID = '2005254357-zKma9BZk'; // LIFF IDを正しいものに置き換えてください
 
-flatpickr("#first-choice-date", {
-  onMonthChange: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  },
-  onYearChange: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  },
-  onReady: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  }
-});
+    const { createApp, ref } = Vue
+    const { VueDatePicker } = window['@vuepic/vue-datepicker'];
 
-const { createApp } = Vue;
-createApp({
-    data() {
-        return {
-            datepicker1: '',
-            datepicker2: '',
-            datepicker3: '',
-            datepicker1time: '',
-            datepicker2time: '',
-            datepicker3time: '',
-            name: "",
-            syoujou: "",
-            number: "",
-            tel: "",
-            message: ""
-        }
-    },
-    methods: {
-        async done() {
-            console.log("Sending message...");
-            var date1 = new Date(this.datepicker1);
-            var date2 = new Date(this.datepicker2);
-            var date3 = new Date(this.datepicker3);
-
-            var datetime1 = date1.getFullYear() + "年" + (date1.getMonth() + 1) + "月" + date1.getDate() + "日 " + this.datepicker1time;
-            var datetime2 = date2.getFullYear() + "年" + (date2.getMonth() + 1) + "月" + date2.getDate() + "日 " + this.datepicker2time;
-            var datetime3 = date3.getFullYear() + "年" + (date3.getMonth() + 1) + "月" + date3.getDate() + "日 " + this.datepicker3time;
-
-            var date = "";
-
-            if (this.datepicker1 !== "" && this.datepicker1time !== ""){
-                date = date + "\n" +  datetime1 
-            }
-            if (this.datepicker2 !== "" && this.datepicker2time !== ""){
-                date = date + "\n" +  datetime2
-            }
-            if (this.datepicker3 !== "" && this.datepicker3time !== ""){
-                date = date + "\n" +  datetime3
-            }
-
-            try {
-                await liff.sendMessages([
-                    {
-                        type: "text",
-                        text: "【予約フォーム】" + "\n" + "お名前：" + this.name + "\n" + "電話番号：" + this.tel + "\n" + "症状：" + this.syoujou + "\n" + "来院有無：" + this.number  + "\n" + "希望日時：" + date + "\n" + "メッセージ：" + this.message,
-                    },
-                ]);
-                console.log("Message sent successfully");
-            } catch (err) {
-                console.error("Error sending message:", err);
-                alert("Error sending message");
-            } finally {
-                liff.closeWindow();
-            }
-        }
-    },
-    async mounted() {
-        try {
-            await liff.init({
-                liffId: "2005254357-zKma9BZk"
+    createApp({
+        components: {
+            VueDatePicker
+        },
+        setup() {
+            const name = ref('');
+            const tel = ref('');
+            const number = ref('');
+            const syoujou = ref('');
+            const date = ref(null);
+            return { name, tel, number, syoujou, date }
+        },
+        mounted() {
+            liff.init({
+                liffId: liffID
+            }).then(() => {
+                if (!liff.isLoggedIn()) {
+                    liff.login();
+                }
+            }).catch(err => {
+                console.error('LIFF initialization failed', err);
             });
-            if (liff.isLoggedIn()) {
-                console.log("Logged in");
-            } else {
-                liff.login();
+        },
+        methods: {
+            async submit() {
+                if (!this.name || !this.tel || !this.number || !this.syoujou || !this.date) {
+                    alert('全てのフィールドを入力してください。');
+                    return;
+                }
+                const payload = {
+                    name: this.name,
+                    tel: this.tel,
+                    number: this.number,
+                    syoujou: this.syoujou,
+                    date: this.date
+                };
+
+                try {
+                    const response = await axios.post('https://script.google.com/macros/s/AKfycbwwsEBsGboGq65eJMY3VS6P1Y7jaUl1np8ceQpZlpr6Pxsqn8gGxyMBOr-Expx3U_HGoQ/exec', payload);
+                    console.log('サーバーからの応答:', response.data);
+                    if (response.data.status === 'success') {
+                        alert('送信が完了しました。');
+                        if (liff.isLoggedIn()) {
+                            liff.sendMessages([
+                                {
+                                    type: 'text',
+                                    text: '予約が完了しました。'
+                                }
+                            ]).then(() => {
+                                console.log('Message sent');
+                            }).catch((err) => {
+                                console.error('Error sending message:', err);
+                            });
+                        }
+                    } else {
+                        document.getElementById('error').style.display = 'block';
+                    }
+                } catch (error) {
+                    console.error('エラーが発生しました:', error);
+                    document.getElementById('error').style.display = 'block';
+                }
             }
-        } catch (err) {
-            console.error("LIFF init error:", err);
         }
-    }
-}).mount('#app');
+    }).mount('#app');
 </script>
+<script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@vuepic/vue-datepicker@latest/dist/vue-datepicker.umd.js"></script>
 </body>
 </html>
