--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <link rel="stylesheet" href="https://unpkg.com/@vuepic/vue-datepicker@latest/dist/main.css">
 <!-- flatpickr css -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<meta name="csrf-token" content="{{ csrf_token() }}">
 <!-- LIFF SDK -->
 <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 <style>
@@ -162,201 +161,148 @@
                     <label class="btn btn-info" style="width: 100%;" :class="syoujou === '臀部・下肢の痛みや痺れ' ? 'check' : ''" for="four">
                         <input name="place" value="臀部・下肢の痛みや痺れ" type="radio" required v-model="syoujou" id="four">臀部・下肢の痛みや痺れ
                     </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'ぎっくり腰・慢性腰痛' ? 'check' : ''" for="five">
-                        <input name="place" value="ぎっくり腰・慢性腰痛" type="radio" required v-model="syoujou" id="five">ぎっくり腰・慢性腰痛
+                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === '顎関節症' ? 'check' : ''" for="five">
+                        <input name="place" value="顎関節症" type="radio" required v-model="syoujou" id="five">顎関節症
                     </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === '骨盤矯正' ? 'check' : ''" for="six">
-                        <input name="place" value="骨盤矯正" type="radio" required v-model="syoujou" id="six">骨盤矯正
+                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === '産後骨盤矯正' ? 'check' : ''" for="six">
+                        <input name="place" value="産後骨盤矯正" type="radio" required v-model="syoujou" id="six">産後骨盤矯正
                     </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'スポーツによる障害・外傷' ? 'check' : ''" for="seven">
-                        <input name="place" value="スポーツによる障害・外傷" type="radio" required v-model="syoujou" id="seven">スポーツによる障害・外傷
-                    </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'その他' ? 'check' : ''" for="eight">
-                        <input name="place" value="その他" type="radio" required v-model="syoujou" id="eight">その他
+                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'その他' ? 'check' : ''" for="seven">
+                        <input name="place" value="その他" type="radio" required v-model="syoujou" id="seven">その他
                     </label>
                 </div>
             </div>
 
-            <!-- datepicker -->
+            <!-- Date picker -->
             <div class="form-group">
-                <label for="first-choice-date">第1希望日</label>
-                <input type="text" id="first-choice-date" placeholder="クリックして日時を入力">
+                <label>ご予約希望日時</label>
+                <VueDatePicker v-model="datepicker" placeholder="日付を選択" :inline="true" :mode="'single'" />
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <label>ご希望の時間</label>
+                    <div class="btn-group" style="width:100%;">
+                        <label class="btn btn-info" style="width: 24%;" for="one">
+                            <input value="10:00" type="radio" v-model="time">10:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="two">
+                            <input value="11:00" type="radio" v-model="time">11:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="three">
+                            <input value="12:00" type="radio" v-model="time">12:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="four">
+                            <input value="13:00" type="radio" v-model="time">13:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="five">
+                            <input value="14:00" type="radio" v-model="time">14:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="six">
+                            <input value="15:00" type="radio" v-model="time">15:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="seven">
+                            <input value="16:00" type="radio" v-model="time">16:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="eight">
+                            <input value="17:00" type="radio" v-model="time">17:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="nine">
+                            <input value="18:00" type="radio" v-model="time">18:00
+                        </label>
+                        <label class="btn btn-info" style="width: 24%;" for="ten">
+                            <input value="19:00" type="radio" v-model="time">19:00
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Message -->
+            <div class="form-group">
+                <label>その他ご要望</label>
+                <textarea v-model="textarea" class="form-control" rows="4"></textarea>
             </div>
 
             <div class="form-group">
-                <label>第1希望時間</label>
-                <select v-model="datepicker1time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
+                <label>メールアドレス</label>
+                <input v-model="email" type="email" name="customer_email" class="form-control" required>
             </div>
 
+            <!-- Submit Button -->
             <div class="form-group">
-                <label>第2希望日</label>
-                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+                <button @click="done" class="btn btn-primary regist">送信</button>
             </div>
-
-            <div class="form-group">
-                <label>第2希望時間</label>
-                <select v-model="datepicker2time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
+            <div class="form-group" id="error">
+                <label style="color:red;">メッセージ送信に失敗しました。もう一度お試しください。</label>
             </div>
-
-            <div class="form-group">
-                <label>第3希望日</label>
-                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
-            </div>
-
-            <div class="form-group">
-                <label>第3希望時間</label>
-                <select v-model="datepicker3time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>メッセージ</label>
-                <textarea v-model="message" name="customer_message" class="form-control" required rows="6"></textarea>
-            </div>
-
-            <input type="button" @click="done()" value="予約内容を送信する" class="btn btn-primary regist">
-        <!-- </form> -->
     </div>
 </section>
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-async function updateAvailability(year, month) {
-  const response = await fetch(`https://script.google.com/macros/s/AKfycbyKeZtzzggmyJPl53BJEtac43BIBuRuk0kVt3SoFPOJ2MeTRQ_NlGca2vOycYlAleUKhA/exec?year=${year}&month=${month}`);
-  const availability = await response.json();
-  
-  document.querySelectorAll('.flatpickr-day').forEach(function(dayElem) {
-    const date = dayElem.dateObj;
-    const dateString = date.toISOString().split('T')[0];
-    if (availability[dateString]) {
-      const badge = document.createElement('div');
-      badge.className = 'availability-badge';
-      badge.textContent = availability[dateString];
-      dayElem.appendChild(badge);
-    }
-  });
-}
-
-flatpickr("#first-choice-date", {
-  onMonthChange: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  },
-  onYearChange: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  },
-  onReady: function(selectedDates, dateStr, instance) {
-    const year = instance.currentYear;
-    const month = instance.currentMonth;
-    updateAvailability(year, month);
-  }
-});
-
-const { createApp } = Vue;
-createApp({
+Vue.createApp({
     data() {
         return {
-            datepicker1: '',
-            datepicker2: '',
-            datepicker3: '',
-            datepicker1time: '',
-            datepicker2time: '',
-            datepicker3time: '',
-            name: "",
-            syoujou: "",
-            number: "",
-            tel: "",
-            message: ""
+            name: '',
+            tel: '',
+            number: '',
+            syoujou: '',
+            datepicker: '',
+            time: '',
+            textarea: '',
+            email: '',
+            liffId: '2005254357-zKma9BZk'
         }
     },
     methods: {
         async done() {
-            console.log("Sending message...");
-            var date1 = new Date(this.datepicker1);
-            var date2 = new Date(this.datepicker2);
-            var date3 = new Date(this.datepicker3);
+            const sendMessage = async (message) => {
+                try {
+                    const profile = await liff.getProfile();
+                    liff.sendMessages([
+                        {
+                            type: 'text',
+                            text: message
+                        }
+                    ]);
+                    alert("メッセージが送信されました。");
+                } catch (error) {
+                    document.getElementById('error').style.display = 'block';
+                    console.error('メッセージ送信に失敗しました:', error);
+                }
+            };
 
-            var datetime1 = date1.getFullYear() + "年" + (date1.getMonth() + 1) + "月" + date1.getDate() + "日 " + this.datepicker1time;
-            var datetime2 = date2.getFullYear() + "年" + (date2.getMonth() + 1) + "月" + date2.getDate() + "日 " + this.datepicker2time;
-            var datetime3 = date3.getFullYear() + "年" + (date3.getMonth() + 1) + "月" + date3.getDate() + "日 " + this.datepicker3time;
-
-            var date = "";
-
-            if (this.datepicker1 !== "" && this.datepicker1time !== ""){
-                date = date + "\n" +  datetime1 
-            }
-            if (this.datepicker2 !== "" && this.datepicker2time !== ""){
-                date = date + "\n" +  datetime2
-            }
-            if (this.datepicker3 !== "" && this.datepicker3time !== ""){
-                date = date + "\n" +  datetime3
-            }
-
+            const message = `
+                お客様名: ${this.name}
+                電話番号: ${this.tel}
+                ご来店回数: ${this.number}
+                症状: ${this.syoujou}
+                ご予約希望日: ${this.datepicker}
+                ご希望の時間: ${this.time}
+                その他ご要望: ${this.textarea}
+                メールアドレス: ${this.email}
+            `;
+            
             try {
-                await liff.sendMessages([
-                    {
-                        type: "text",
-                        text: "【予約フォーム】" + "\n" + "お名前：" + this.name + "\n" + "電話番号：" + this.tel + "\n" + "症状：" + this.syoujou + "\n" + "来院有無：" + this.number  + "\n" + "希望日時：" + date + "\n" + "メッセージ：" + this.message,
-                    },
-                ]);
-                console.log("Message sent successfully");
-            } catch (err) {
-                console.error("Error sending message:", err);
-                alert("Error sending message");
-            } finally {
-                liff.closeWindow();
+                await sendMessage(message);
+            } catch (error) {
+                console.error('Error sending message:', error);
+            }
+        },
+        async initLiff() {
+            try {
+                await liff.init({ liffId: this.liffId });
+                if (!liff.isLoggedIn()) {
+                    liff.login();
+                }
+            } catch (error) {
+                console.error('LIFF初期化に失敗しました:', error);
             }
         }
     },
-    async mounted() {
-        try {
-            await liff.init({
-                liffId: "2005254357-zKma9BZk"
-            });
-            if (liff.isLoggedIn()) {
-                console.log("Logged in");
-            } else {
-                liff.login();
-            }
-        } catch (err) {
-            console.error("LIFF init error:", err);
-        }
+    mounted() {
+        this.initLiff();
     }
 }).mount('#app');
 </script>
+<script src="https://unpkg.com/@vuepic/vue-datepicker@latest/dist/main.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </body>
 </html>
