--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="form-group">
     <label for="first-choice-date">第1希望日</label>
-    <input type="text" id="first-choice-date" v-model="datepicker1" placeholder="クリックして日時を入力">
+    <input v-model="datepicker1" type="text" id="first-choice-date" placeholder="クリックして日時を入力">
 </div>
 
             <div class="form-group">
@@ -282,11 +282,14 @@ flatpickr("#first-choice-date", {
     const year = instance.currentYear;
     const month = instance.currentMonth;
     updateAvailability(year, month);
+  },
+  onChange: function(selectedDates) {
+    app.datepicker1 = selectedDates[0];
   }
 });
 
 const { createApp } = Vue;
-createApp({
+const app = createApp({
     data() {
         return {
             datepicker1: '',
@@ -302,87 +305,58 @@ createApp({
             message: ""
         }
     },
-methods: {
-    async done() {
-        console.log("Sending message...");
+    methods: {
+        async done() {
+            console.log("Sending message...");
+            var date1 = new Date(this.datepicker1);
+            var date2 = new Date(this.datepicker2);
+            var date3 = new Date(this.datepicker3);
 
-        // Parse the dates and format them
-        var datetime1 = this.formatDate(this.datepicker1) + " " + this.datepicker1time;
-        var datetime2 = this.formatDate(this.datepicker2) + " " + this.datepicker2time;
-        var datetime3 = this.formatDate(this.datepicker3) + " " + this.datepicker3time;
+            var datetime1 = date1.getFullYear() + "年" + (date1.getMonth() + 1) + "月" + date1.getDate() + "日 " + this.datepicker1time;
+            var datetime2 = date2.getFullYear() + "年" + (date2.getMonth() + 1) + "月" + date2.getDate() + "日 " + this.datepicker2time;
+            var datetime3 = date3.getFullYear() + "年" + (date3.getMonth() + 1) + "月" + date3.getDate() + "日 " + this.datepicker3time;
 
-        var date = "";
+            var date = "";
 
-        if (this.datepicker1 && this.datepicker1time) {
-            date = date + "\n" + datetime1;
-        }
-        if (this.datepicker2 && this.datepicker2time) {
-            date = date + "\n" + datetime2;
-        }
-        if (this.datepicker3 && this.datepicker3time) {
-            date = date + "\n" + datetime3;
-        }
+            if (this.datepicker1 !== "" && this.datepicker1time !== ""){
+                date = date + "\n" +  datetime1 
+            }
+            if (this.datepicker2 !== "" && this.datepicker2time !== ""){
+                date = date + "\n" +  datetime2
+            }
+            if (this.datepicker3 !== "" && this.datepicker3time !== ""){
+                date = date + "\n" +  datetime3
+            }
 
-        try {
-            await liff.sendMessages([
-                {
-                    type: "text",
-                    text: "【予約フォーム】" + "\n" +
-                          "お名前：" + this.name + "\n" +
-                          "電話番号：" + this.tel + "\n" +
-                          "症状：" + this.syoujou + "\n" +
-                          "来院有無：" + this.number + "\n" +
-                          "希望日時：" + date + "\n" +
-                          "メッセージ：" + this.message,
-                },
-            ]);
-            console.log("Message sent successfully");
-        } catch (err) {
-            console.error("Error sending message:", err);
-            alert("Error sending message");
-        } finally {
-            liff.closeWindow();
+            try {
+                await liff.sendMessages([
+                    {
+                        type: "text",
+                        text: "【予約フォーム】" + "\n" + "お名前：" + this.name + "\n" + "電話番号：" + this.tel + "\n" + "症状：" + this.syoujou + "\n" + "来院有無：" + this.number  + "\n" + "希望日時：" + date + "\n" + "メッセージ：" + this.message,
+                    },
+                ]);
+                console.log("Message sent successfully");
+            } catch (err) {
+                console.error("Error sending message:", err);
+                alert("Error sending message");
+            } finally {
+                liff.closeWindow();
+            }
         }
     },
-    formatDate(dateStr) {
-        if (!dateStr) return "";
-        var date = new Date(dateStr);
-        return date.getFullYear() + "年" + (date.getMonth() + 1) + "月" + date.getDate() + "日";
-    }
-}
-	
-mounted() {
-    try {
-        await liff.init({
-            liffId: "2005254357-zKma9BZk"
-        });
-        if (liff.isLoggedIn()) {
-            console.log("Logged in");
-        } else {
-            liff.login();
-        }
-
-        flatpickr("#first-choice-date", {
-            onChange: (selectedDates, dateStr) => {
-                this.datepicker1 = dateStr;
-            },
-            onMonthChange: (selectedDates, dateStr, instance) => {
-                const year = instance.currentYear;
-                const month = instance.currentMonth;
-                this.updateAvailability(year, month);
-            },
-            onYearChange: (selectedDates, dateStr, instance) => {
-                const year = instance.currentYear;
-                const month = instance.currentMonth;
-                this.updateAvailability(year, month);
-            },
-            onReady: (selectedDates, dateStr, instance) => {
-                const year = instance.currentYear;
-                const month = instance.currentMonth;
-                this.updateAvailability(year, month);
+    async mounted() {
+        try {
+            await liff.init({
+                liffId: "2005254357-zKma9BZk"
+            });
+            if (liff.isLoggedIn()) {
+                console.log("Logged in");
+            } else {
+                liff.login();
             }
-        });
-    } catch (err) {
-        console.error("LIFF init error:", err);
+        } catch (err) {
+            console.error("LIFF init error:", err);
+        }
     }
-}
+}).mount('#app');
+</script>
