--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="form-group">
     <label for="first-choice-date">第1希望日</label>
-    <input v-model="datepicker1" type="text" id="first-choice-date" placeholder="クリックして日時を入力">
+    <input v-model="datepicker1" type="text" id="first-choice-date" placeholder="クリックして日時を入力">  format="yyyy年MM月dd日" 
 </div>
 
             <div class="form-group">
