--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ async function updateAvailability(year, month) {
 }
 
 flatpickr("#first-choice-date", {
-  dateFormat: "Y年m月d日",
+  dateFormat: "yyyy年MM月dd日",
   onMonthChange: function(selectedDates, dateStr, instance) {
     const year = instance.currentYear;
     const month = instance.currentMonth;
