--- a/index.html
+++ b/index.html
@@ -179,73 +179,74 @@
 
 <div class="form-group">
     <label for="first-choice-date">第1希望日</label>
-    <input v-model="datepicker1" type="text" id="first-choice-date"  format="yyyy年MM月dd日" placeholder="クリックして日時を入力">
+    <input v-model="datepicker1" type="text" id="first-choice-date" placeholder="クリックして日時を入力">
 </div>
 
-            <div class="form-group">
-                <label>第1希望時間</label>
-                <select v-model="datepicker1time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
+<div class="form-group">
+    <label>第1希望時間</label>
+    <select v-model="datepicker1time" class="form-control">
+        <option disabled value="">選択してください</option>
+        <option>9:00</option>
+        <option>10:00</option>
+        <option>11:00</option>
+        <option>12:00</option>
+        <option>13:00</option>
+        <option>14:00</option>
+        <option>15:00</option>
+        <option>16:00</option>
+        <option>17:00</option>
+    </select>
+</div>
 
-            <div class="form-group">
-                <label>第2希望日</label>
-                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
-            </div>
+<div class="form-group">
+    <label>第2希望日</label>
+    <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+</div>
 
-            <div class="form-group">
-                <label>第2希望時間</label>
-                <select v-model="datepicker2time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
+<div class="form-group">
+    <label>第2希望時間</label>
+    <select v-model="datepicker2time" class="form-control">
+        <option disabled value="">選択してください</option>
+        <option>9:00</option>
+        <option>10:00</option>
+        <option>11:00</option>
+        <option>12:00</option>
+        <option>13:00</option>
+        <option>14:00</option>
+        <option>15:00</option>
+        <option>16:00</option>
+        <option>17:00</option>
+    </select>
+</div>
 
-            <div class="form-group">
-                <label>第3希望日</label>
-                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
-            </div>
+<div class="form-group">
+    <label>第3希望日</label>
+    <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+</div>
 
-            <div class="form-group">
-                <label>第3希望時間</label>
-                <select v-model="datepicker3time" class="form-control">
-                    <option disabled value="">選択してください</option>
-                    <option>9:00</option>
-                    <option>10:00</option>
-                    <option>11:00</option>
-                    <option>12:00</option>
-                    <option>13:00</option>
-                    <option>14:00</option>
-                    <option>15:00</option>
-                    <option>16:00</option>
-                    <option>17:00</option>
-                </select>
-            </div>
+<div class="form-group">
+    <label>第3希望時間</label>
+    <select v-model="datepicker3time" class="form-control">
+        <option disabled value="">選択してください</option>
+        <option>9:00</option>
+        <option>10:00</option>
+        <option>11:00</option>
+        <option>12:00</option>
+        <option>13:00</option>
+        <option>14:00</option>
+        <option>15:00</option>
+        <option>16:00</option>
+        <option>17:00</option>
+    </select>
+</div>
 
-            <div class="form-group">
-                <label>メッセージ</label>
-                <textarea v-model="message" name="customer_message" class="form-control" required rows="6"></textarea>
-            </div>
+<div class="form-group">
+    <label>メッセージ</label>
+    <textarea v-model="message" name="customer_message" class="form-control" required rows="6"></textarea>
+</div>
 
-            <input type="button" @click="done()" value="予約内容を送信する" class="btn btn-primary regist">
+<input type="button" @click="done()" value="予約内容を送信する" class="btn btn-primary regist">
+
         <!-- </form> -->
     </div>
 </section>
@@ -268,7 +269,7 @@ async function updateAvailability(year, month) {
 }
 
 flatpickr("#first-choice-date", {
-  dateFormat: "yyyy年MM月dd日",
+  dateFormat: "Y年m月d日",
   onMonthChange: function(selectedDates, dateStr, instance) {
     const year = instance.currentYear;
     const month = instance.currentMonth;
